gobmkida/c1/kill_dfa
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:942:12: error: expected expression
*( _OWORD *)&pdfa->max_states = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:942:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->max_states = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:943:12: error: expected expression
*( _OWORD *)&pdfa->pre_rotated = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:943:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->pre_rotated = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:944:12: error: expected expression
*( _OWORD *)&pdfa->name[64] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:944:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[64] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:945:12: error: expected expression
*( _OWORD *)&pdfa->name[48] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:945:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[48] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:946:12: error: expected expression
*( _OWORD *)&pdfa->name[32] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:946:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[32] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:947:12: error: expected expression
*( _OWORD *)&pdfa->name[16] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:947:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[16] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:948:12: error: expected expression
*( _OWORD *)pdfa->name = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/patterns/dfa.c:948:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)pdfa->name = 0LL; 
   ^
14 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/kill_dfa/src/obj/3/dfa.o] Error 1
